Styling the search bar and adding background

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
       integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6LZzjA6gi5peLyFlB00v7Jc5"
       crossorigin="anonymous"
     />
+
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="search-container">
