--- a/index.html
+++ b/index.html
@@ -6,25 +6,29 @@
     <title>Weather App</title>
     <link
       rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.6.0/css/bootstrap.min.css"
-      integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6LZzjA6gi5peLyFlB00v7Jc5"
-      crossorigin="anonymous"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     />
-
+    <link rel="stylesheet" href="app.js" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="search-container">
-      <input
-        type="text"
-        id="search-city"
-        placeholder="Enter City..."
-        required
-      />
-      <button onclick="WeatherDetails()">Search</button>
+    <div class="container">
+      <h1 class="text-center mb-4">Weather App</h1>
+      <div class="search-bar form-inline justify-content-center mb-4">
+        <input
+          type="text"
+          id="search-city"
+          class="form-control mr-2"
+          placeholder="Enter City..."
+        />
+        <button class="btn btn-primary" onclick="WeatherDetails()">
+          Search
+        </button>
+      </div>
+      <div id="weather-info"></div>
+      <div id="hourly-forecast"></div>
+      <div id="daily-forecast"></div>
     </div>
-
-    <div class="details" id="forecast-details"></div>
 
     <script src="app.js"></script>
   </body>
