Added a function to fetch current location of device data

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="app.js" />
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body>
+  <body onload="getLocation()">
     <div class="container">
       <h1 class="text-center mb-4">Weather App</h1>
       <div class="search-bar form-inline justify-content-center mb-4">
@@ -31,5 +31,12 @@
     </div>
 
     <script src="app.js"></script>
+
+    <footer>
+      <div class="footer">
+        <p>Developed by Talib Raath</p>
+      </div>
+    </footer>
+    <br />
   </body>
 </html>
