changing the look

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather App</title>
     <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
+
+    <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     />
@@ -32,11 +37,8 @@
 
     <script src="app.js"></script>
 
-    <footer>
-      <div class="footer">
-        <p>Developed by Talib Raath</p>
-      </div>
+    <footer class="text-center mt-4">
+      <p>Developed by Talib Raath</p>
     </footer>
-    <br />
   </body>
 </html>
