Adding footer  mark

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <script src="app.js"></script>
 
     <footer class="text-center mt-4">
-      <p>Developed by Talib Raath</p>
+      <p>&copy;Developed by Talib Raath</p>
     </footer>
   </body>
 </html>
